--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "React Native common components",
   "main": "index.js",
   "scripts": {
@@ -37,5 +37,8 @@
   ],
   "dependencies": {
     "prop-types": "^15.5.10"
+  },
+  "peerDependencies": {
+    "react-native": "*"
   }
 }
