add readme and travis

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React Native common components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
