--- a/demo/package.json
+++ b/demo/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.1"
+    "react-autobind": "^1.0.6",
+    "react-native": "0.52.1",
+    "react-native-common": "*",
+    "react-native-drawer": "^2.5.0"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
