--- a/demo/package.json
+++ b/demo/package.json
@@ -10,7 +10,7 @@
     "react": "16.2.0",
     "react-autobind": "^1.0.6",
     "react-native": "0.52.1",
-    "react-native-common": "*",
+    "react-native-common": "rghorbani/react-native-common",
     "react-native-drawer": "^2.5.0",
     "react-native-vector-icons": "^4.5.0"
   },
