--- a/demo/package.json
+++ b/demo/package.json
@@ -16,8 +16,12 @@
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babel-preset-react-native": "4.0.0",
+    "escape-string-regexp": "^1.0.5",
+    "glob-to-regexp": "^0.3.0",
     "jest": "22.1.4",
+    "metro-bundler": "^0.22.1",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
