--- a/package.json
+++ b/package.json
@@ -52,27 +52,31 @@
     "eslint-plugin-react": "~7.5.1",
     "eslint-plugin-react-native": "~3.2.1",
     "jest": "~22.1.4",
-    "prettier": "~1.5.3"
+    "prettier": "~1.5.3",
+    "react": "16.0.0",
+    "react-native": "0.51.0"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
     "react-native-vector-icons": "^4.5.0"
   },
+  "prettier": {
+    "requirePragma": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "jsxBracketSameLine": true,
+    "parser": "flow"
+  },
   "jest": {
     "preset": "react-native",
-    "modulePathIgnorePatterns": [
-      "<rootDir>/demo/node_modules"
-    ],
     "testPathIgnorePatterns": [
-      "<rootDir>/demo/node_modules"
+      "src/components/navigator",
+      "/node_modules/"
     ]
   },
   "homepage": "https://github.com/rghorbani/react-native-common",
-  "_npmUser": {
-    "name": "rghorbani",
-    "email": "r.ghorbani.f@gmail.com"
-  },
   "maintainers": [
     {
       "name": "rghorbani",
