--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "0.10.1",
+  "version": "0.10.2",
   "description": "React Native common components",
   "main": "src/index.js",
   "scripts": {
@@ -14,6 +14,8 @@
     "test:coverage": "jest --coverage"
   },
   "files": [
+    "android/",
+    "ios/",
     "src/"
   ],
   "keyword": [
