--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "description": "React Native common components",
   "main": "src/index.js",
   "scripts": {
@@ -36,13 +36,15 @@
   "dependencies": {
     "create-react-class": "~15.6.2",
     "fbjs": "~0.8.16",
+    "hoist-non-react-statics": "^2.5.0",
     "immutable": "~3.8.2",
     "lodash": "^4.17.4",
     "prop-types": "~15.6.0",
     "react-native-animatable": "^1.2.4",
     "react-native-blur": "~3.2.2",
     "react-timer-mixin": "~0.13.3",
-    "rebound": "~0.0.15"
+    "rebound": "~0.0.15",
+    "url-parse": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "~6.26.0",
@@ -89,7 +91,10 @@
   },
   "homepage": "https://github.com/rghorbani/react-native-common",
   "contributors": [
-    { "name": "rghorbani", "email": "r.ghorbani.f@gmail.com" }
+    {
+      "name": "rghorbani",
+      "email": "r.ghorbani.f@gmail.com"
+    }
   ],
   "repository": {
     "type": "git",
