--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "hoist-non-react-statics": "^2.5.0",
     "immutable": "~3.8.2",
     "lodash": "^4.17.4",
+    "moment": "^2.21.0",
     "prop-types": "~15.6.0",
     "react-native-animatable": "^1.2.4",
     "react-native-blur": "~3.2.2",
