--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "React Native common components",
   "main": "src/index.js",
   "scripts": {
@@ -40,6 +40,7 @@
     "immutable": "~3.8.2",
     "lodash": "^4.17.4",
     "moment": "^2.21.0",
+    "moment-jalaali": "^0.7.2",
     "prop-types": "~15.6.0",
     "react-native-animatable": "^1.2.4",
     "react-native-blur": "~3.2.2",
