--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-common",
-  "version": "1.2.1",
-  "description": "React Native common components",
+  "version": "1.2.2",
+  "description": "UI Toolset & Components and API Library for React Native.",
   "main": "src/index.js",
   "scripts": {
     "start": "watchman watch-del-all && react-native start",
