--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "UI Toolset & Components and API Library for React Native.",
   "main": "src/index.js",
   "scripts": {
@@ -73,9 +73,8 @@
     "react-native": "0.51.0"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*",
-    "react-native-vector-icons": "^4.5.0"
+    "react": "^16.0.0",
+    "react-native": "^0.51.0"
   },
   "prettier": {
     "requirePragma": true,
