--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "UI Toolset & Components and API Library for React Native.",
   "main": "src/index.js",
   "scripts": {
@@ -16,7 +16,10 @@
   "files": [
     "android/",
     "ios/",
-    "src/"
+    "src/",
+    "LICENSE",
+    "README.md",
+    "RNCommon.podspec"
   ],
   "keyword": [
     "react",
