--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "UI Toolset & Components and API Library for React Native.",
   "main": "src/index.js",
   "scripts": {
@@ -57,6 +57,7 @@
     "prop-types": "~15.6.0",
     "react-native-animatable": "^1.2.4",
     "react-native-blur": "~3.2.2",
+    "react-native-interactable": "latest",
     "react-timer-mixin": "~0.13.3",
     "rebound": "~0.0.15",
     "url-parse": "^1.2.0"
