--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "1.12.1",
+  "version": "2.0.0",
   "description": "UI Toolset & Components and API Library for React Native with Independent RTL support.",
   "main": "src/index.js",
   "typings": "typings/index.d.ts",
@@ -61,6 +61,7 @@
     "prop-types": "~15.6.0",
     "react-native-animatable": "^1.3.0",
     "react-native-blur": "~3.2.2",
+    "react-native-ui-lib": "~3.3.132",
     "react-timer-mixin": "~0.13.3",
     "rebound": "~0.0.15",
     "url-parse": "^1.2.0"
