--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "UI Toolset & Components and API Library for React Native with Independent RTL support.",
   "main": "src/index.js",
   "typings": "typings/index.d.ts",
@@ -59,7 +59,7 @@
     "immutable": "~3.8.2",
     "lodash": "^4.17.11",
     "prop-types": "~15.6.2",
-    "react-native-ui-lib": "~3.3.248",
+    "react-native-ui-lib": "~3.6.1",
     "react-timer-mixin": "~0.13.4",
     "rebound": "~0.1.0",
     "url-parse": "^1.4.3"
@@ -76,10 +76,11 @@
     "eslint-plugin-react": "~7.7.0",
     "eslint-plugin-react-native": "~3.2.1",
     "jest": "~22.4.3",
+    "metro-react-native-babel-preset": "^0.48.1",
     "prettier": "~1.5.3",
-    "react": "16.0.0",
+    "react": "16.6.0-alpha.8af6728",
     "react-js-to-ts": "^1.4.0",
-    "react-native": "0.51.0",
+    "react-native": "0.57.3",
     "typescript": "^2.9.2"
   },
   "peerDependencies": {
