--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "UI Toolset & Components and API Library for React Native with Independent RTL support.",
   "main": "src/index.js",
   "typings": "typings/index.d.ts",
@@ -76,9 +76,9 @@
     "eslint-plugin-react-native": "~3.2.1",
     "jest": "~22.4.3",
     "metro-react-native-babel-preset": "^0.48.1",
-    "prettier": "~1.5.3",
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.3",
+    "prettier": "1.15.3",
+    "react": "16.6.3",
+    "react-native": "0.57.8"
   },
   "peerDependencies": {
     "react": "*",
@@ -106,11 +106,11 @@
   },
   "rnpm": {
     "android": {
-      "packageImportPath": "import com.kajoo.reactnativecommon.textinput.*;",
+      "packageImportPath": "import com.wix.reactnativeuilib.textinput.TextInputDelKeyHandlerPackage;",
       "packageInstance": "new TextInputDelKeyHandlerPackage()"
     },
     "ios": {
-      "project": "ios/RNCommon.xcodeproj"
+      "project": "ios/reactnativeuilib.xcodeproj"
     }
   },
   "homepage": "https://github.com/rghorbani/react-native-common",
