--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-common",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "UI Toolset & Components and API Library for React Native with Independent RTL support.",
   "main": "src/index.js",
   "typings": "typings/index.d.ts",
@@ -17,13 +17,9 @@
     "build:typings": "rm -rf ./typings && ./scripts/build-typings.sh && tsc"
   },
   "files": [
-    "android/",
-    "ios/",
     "src/",
-    "typings/",
     "LICENSE",
-    "README.md",
-    "RNCommon.podspec"
+    "README.md"
   ],
   "keyword": [
     "react",
